# cfdis

./: .gitignore  .travis.yml  README.md  cfdis.cabal  stack.yaml
CFDI/: Parser.hs  Types.hs
cancel_cfdi/: README.md  main.hs
src/: CFDI.hs
src/CFDI/: CSD.hs  Catalog.hs  Catalogs.hs  Chain.hs  Chainable.hs  PAC.hs  Parser.hs  Renderer.hs  Types.hs  V3_2.hs  XmlNode.hs
src/CFDI/Catalogs/: CfdiTypes.hs  Countries.hs  Currencies.hs  CustomPatents.hs  Customs.hs  FactorTypes.hs  Localities.hs  MeasurementUnits.hs  Municipalities.hs  PaymentMethods.hs  ProductOrServices.hs  RelationshipTypes.hs  States.hs  Suburbs.hs  TaxRegimes.hs  Taxes.hs  Uses.hs  WaysToPay.hs  ZipCodes.hs
src/CFDI/PAC/: Dummy.hs  Fel.hs  ITimbre.hs
src/CFDI/Types/: AccountNumber.hs  Addenda.hs  AddressNumber.hs  AddressReference.hs  AddressState.hs  Amount.hs  BankName.hs  BankRfc.hs  CFDI.hs  Catalog.hs  CertificateNumber.hs  CfdiType.hs  CfdiTypes.hs  CompanyRfc.hs  Complement.hs  Concept.hs  ConceptRetainedTax.hs  ConceptRetainedTaxes.hs  ConceptTaxes.hs  ConceptTransferedTax.hs  ConceptTransferedTaxes.hs  Concepts.hs  Confirmation.hs  Countries.hs  Country.hs  Currencies.hs  Currency.hs  Custom.hs  CustomInfo.hs  CustomPatent.hs  CustomPatents.hs  Customs.hs  Description100.hs  Description120.hs  Description3_30.hs  Description3_50.hs  Description50.hs  Description7_30.hs  Dimensions.hs  ExchangeRate.hs  (+116 more)
src/CFDI/V3_2/: CSD.hs  Chain.hs  PAC.hs  Parser.hs  Renderer.hs  Types.hs
src/CFDI/V3_2/PAC/: ITimbre.hs
stamp/: README.md  main.hs
test/unit/: CFDISpec.hs
test/unit/CFDI/: CSDSpec.hs  ChainSpec.hs  ParserSpec.hs  RendererSpec.hs  V3_2Spec.hs
test/unit/CFDI/PAC/: FelSpec.hs  ITimbreSpec.hs
test/unit/CFDI/V3_2/: CSDSpec.hs
test/unit/CFDI/V3_2/PAC/: ITimbreSpec.hs
test/xml/: invoice-for-stamp.xml  invoice.xml  invoice_3_3.xml
test/yaml/pac-credentials/: fel.yml.sample  itimbre.yml.sample
