name:                cfdis
version:             0.1.0.0
synopsis:            A set of tools to work with CFDIs (mexican invoices)
description:         A set of tools to work with CFDIs (mexican invoices)
homepage:            https://github.com/yusent/cfdis
license:             MIT
license-file:        LICENSE
author:              Yusent Chig
maintainer:          yusent@protonmail.com
copyright:           2017 Yusent Chig
category:            Invoicing
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     CFDI
                     , CFDI.Chain
                     , CFDI.CSD
                     , CFDI.PAC
                     , CFDI.Parser
                     , CFDI.Renderer
                     , CFDI.Types
  build-depends:       aeson >= 1.1 && < 1.2
                     , base >= 4.7 && < 5
                     , base64-bytestring >= 1.0 && < 1.1
                     , basic-prelude >= 0.6 && < 0.7
                     , bytestring >= 0.10 && < 0.11
                     , errors >= 2.2 && < 2.3
                     , ghc >= 8.0 && < 8.1
                     , http-conduit >= 2.2 && < 2.3
                     , http-types >= 0.9 && < 0.10
                     , process-extras >= 0.7 && < 0.8
                     , text >= 1.2 && < 1.3
                     , time >= 1.6 && < 1.7
                     , xml >= 1.3 && < 1.4
  default-language:    Haskell2010

test-suite unit-tests
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  hs-source-dirs:   test/unit
  other-modules:    CFDI.CSDSpec
                  , CFDISpec
  build-depends:    base
                  , cfdis
                  , directory
                  , extra
                  , hspec
                  , hspec-discover
                  , temporary
                  , text
                  , time
  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/yusent/cfdis
