name:                cfdis
version:             0.1.0.0
synopsis:            A set of tools to work with CFDIs (mexican invoices)
description:         A set of tools to work with CFDIs (mexican invoices)
homepage:            https://github.com/yusent/cfdis
license:             MIT
license-file:        LICENSE
author:              Yusent Chig
maintainer:          yusent@protonmail.com
copyright:           2017 Yusent Chig
category:            Invoicing
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-extensions:  OverloadedStrings
  exposed-modules:     CFDI.CSD
                     , CFDI.Types
                     , CFDI.V3_2
                     , CFDI.V3_2.Chain
                     , CFDI.V3_2.PAC
                     , CFDI.V3_2.PAC.ITimbre
                     , CFDI.V3_2.Parser
                     , CFDI.V3_2.Renderer
                     , CFDI.V3_2.Types
  other-modules:       CFDI.Chainable
                     , CFDI.Types.CfdiType
                     , CFDI.Types.Country
                     , CFDI.Types.Currency
                     , CFDI.Types.Custom
                     , CFDI.Types.CustomPatent
                     , CFDI.Types.FactorType
                     , CFDI.Types.Locality
                     , CFDI.Types.MeasurementUnit
                     , CFDI.Types.Municipality
                     , CFDI.Types.PaymentMethod
                     , CFDI.Types.ProductOrService
                     , CFDI.Types.RelationshipType
                     , CFDI.Types.State
                     , CFDI.Types.Suburb
                     , CFDI.Types.Tax
                     , CFDI.Types.TaxRegime
                     , CFDI.Types.Type
                     , CFDI.Types.Use
                     , CFDI.Types.WayToPay
                     , CFDI.Types.ZipCode
  build-depends:       aeson >= 1.1 && < 1.2
                     , base >= 4.7 && < 5
                     , base64-bytestring >= 1.0 && < 1.1
                     , basic-prelude >= 0.6 && < 0.7
                     , bytestring >= 0.10 && < 0.11
                     , containers >= 0.5 && < 0.6
                     , errors >= 2.2 && < 2.3
                     , ghc >= 8.0 && < 8.1
                     , http-conduit >= 2.2 && < 2.3
                     , http-types >= 0.9 && < 0.10
                     , process-extras >= 0.7 && < 0.8
                     , text >= 1.2 && < 1.3
                     , time >= 1.6 && < 1.7
                     , xml >= 1.3 && < 1.4
  default-language:    Haskell2010

test-suite unit-tests
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  hs-source-dirs:   test/unit
  other-modules:    CFDI.CSDSpec
                  , CFDI.V3_2.PAC.ITimbreSpec
                  , CFDI.V3_2Spec
  build-depends:    base
                  , cfdis
                  , directory
                  , extra
                  , hspec
                  , hspec-discover
                  , temporary
                  , text
                  , time
                  , yaml
  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/yusent/cfdis
